--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Image Library</title>
   </head>
-  <body>
+  <body class="bg-dark text-light">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
