--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Image Library</title>
+    <title>Gen Library</title>
   </head>
   <body class="bg-dark text-light">
     <div id="app"></div>
